# ohtu-miniprojekti

./: .gitignore  .pylintrc  Procfile  README.md  client.js  pyproject.toml  requirements.txt  run_robot_tests.sh  tasks.py
.github/workflows/: main.yml
dokumentaatio/: DefinitionOfDone.md  Tyoaikakirjanpito.md
src/: AppLibrary.py  app.py  db.py  routes.py  schema.sql
src/repositories/: user_repository.py  vinkki_repository.py
src/services/: user_service.py  vinkki_service.py
src/templates/: index.html  kayttajansivu.html  kirjautuminen.html  register.html  ulkoasu.html  uusivinkki.html
src/tests/: app_test.py  index.robot  login.robot  register.robot  resource.robot
src/tests/repositories/: user_repository_test.py
src/tests/services/: user_service_test.py  vinkki_service_test.py
