[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Jatynjala <johannestynjala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pylint = "^2.12.1"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.1"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
