[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Jatynjala <johannestynjala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pylint = "^2.12.1"
invoke = "^1.6.0"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
robotframework-seleniumlibrary = "^5.1.3"
requests = "^2.26.0"
psycopg2 = {version = "^2.9.2", extras = ["production"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.1"
coverage = "^6.2"
psycopg2-binary = {version = "^2.9.2", extras = ["development"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
